<resources>
    <string name="app_name">macro_meter</string>

    <!-- String resources for first launch activity -->
    <string name="oob_text">Please fill out the information below</string>
    <string name="textView_label_age">Age</string>
    <string name="textView_hint_age">0</string>
    <string name="textView_label_gender">Gender</string>
    <string name="checkbox_label_male">Male</string>
    <string name="checkbox_label_female">Female</string>
    <string name="textView_label_height">Height</string>
    <string name="textView_hint_heightfeet">0 ft</string>
    <string name="textView_hint_heightinch">0 in</string>
    <string name="textView_label_weight">Weight</string>
    <string name="textView_hint_weight">0 lbs</string>
    <string name="textView_label_activity">Activity</string>
    <string name="button_dataconfirm">Calculate Calories!</string>

    <string name="action_settings">Settings</string>

    <string-array name="activity_level">
        <item>Select an activity level</item>
        <item>Sedentary (little to no exercise)</item>
        <item>Light (exercise/sports 1-3 times/week)</item>
        <item>Moderate (exercise/sports 3-5 times/week)</item>
        <item>Very Active (hard exercise/sports 6-7 times/week)</item>
        <item>Intense (very hard exercise/sports or physical job)</item>
    </string-array>

    <string-array name="activity_value">
        <item>1</item>
        <item>1.2</item>
        <item>1.375</item>
        <item>1.55</item>
        <item>1.725</item>
        <item>1.9</item>
    </string-array>

    <string-array name="journal_food_entry">
        <item></item>
        <item>Add new...</item>
        <item>Add existing...</item>
    </string-array>
</resources>
